[gd_scene load_steps=8 format=3 uid="uid://c3ccrckpghnpv"]

[ext_resource type="Script" path="res://Scripts/Game/TurnSelecter.gd" id="1_ogkea"]
[ext_resource type="Texture2D" uid="uid://42eu08t2kd6k" path="res://Resources/Menu/EffectFrame.png" id="2_suyck"]
[ext_resource type="Script" path="res://Scripts/Game/TurnButtonGUIManager.gd" id="3_ssey4"]
[ext_resource type="FontFile" uid="uid://b4cn53nlm347x" path="res://MoriaCitadel.TTF" id="4_vsovd"]
[ext_resource type="Texture2D" uid="uid://dhik5j6wvdxno" path="res://Resources/MainScene/Hide.png" id="5_vx6f7"]
[ext_resource type="Texture2D" uid="uid://bu3hdjdwnyns4" path="res://Resources/MainScene/Show.png" id="6_stm6h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xhgl"]
size = Vector2(613, 307)

[node name="Turn Manager" type="Area2D"]
z_index = 2
script = ExtResource("1_ogkea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_1xhgl")

[node name="Background" type="Sprite2D" parent="." groups=["GUI_Manager", "TurnManager"]]
visible = false
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_suyck")
script = ExtResource("3_ssey4")

[node name="Play" type="Button" parent="Background" groups=["PlayButton"]]
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.262
anchor_right = 0.262
anchor_bottom = 0.262
offset_left = -668.288
offset_top = -334.144
offset_right = 371.712
offset_bottom = 185.856
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
text = "PLAY"
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Draw" type="Button" parent="Background" groups=["DrawButton"]]
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.73
anchor_right = 0.262
anchor_bottom = 0.73
offset_left = -668.288
offset_top = -333.76
offset_right = 371.712
offset_bottom = 186.24
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
text = "DRAW"
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Lymph" type="Button" parent="Background" groups=["LymphButton"]]
anchors_preset = -1
anchor_left = 0.735
anchor_top = 0.262
anchor_right = 0.735
anchor_bottom = 0.262
offset_left = -667.64
offset_top = -334.144
offset_right = 372.36
offset_bottom = 185.856
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
text = "LYMPH"
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Stress" type="Button" parent="Background" groups=["StressButton"]]
anchors_preset = -1
anchor_left = 0.735
anchor_top = 0.73
anchor_right = 0.735
anchor_bottom = 0.73
offset_left = -667.64
offset_top = -333.76
offset_right = 372.36
offset_bottom = 186.24
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
text = "STRESS"
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Hide" type="Button" parent="Background"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.502
anchor_right = 0.5
anchor_bottom = 0.502
offset_left = -564.5
offset_top = -307.024
offset_right = 475.5
offset_bottom = 212.976
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.2)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Background/Hide"]
z_index = 1
position = Vector2(525, 250)
scale = Vector2(1.5, 0.75)
texture = ExtResource("5_vx6f7")

[node name="Show" type="Button" parent="." groups=["ShowButton"]]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.502
anchor_right = 0.5
anchor_bottom = 0.502
offset_left = -31.5
offset_top = -30.0
offset_right = 1008.5
offset_bottom = 490.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.06, 0.12)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_vsovd")
theme_override_font_sizes/font_size = 150
icon = ExtResource("2_suyck")
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Show"]
z_index = 1
position = Vector2(525, 250)
scale = Vector2(1.5, 0.75)
texture = ExtResource("6_stm6h")

[connection signal="pressed" from="Background/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Background/Draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="Background/Lymph" to="." method="_on_lymph_pressed"]
[connection signal="pressed" from="Background/Stress" to="." method="_on_stress_pressed"]
[connection signal="pressed" from="Background/Hide" to="." method="_on_hide_pressed"]
[connection signal="pressed" from="Show" to="." method="_on_show_pressed"]
